Update portfolio with latest resume details: added new trading platform project, updated experience and projects descriptions, expanded skills with Go, Next.js, Redis, Docker, AWS, added recent certification and coursework

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                     <h3>Bachelor of Technology in Computer Science and Engineering</h3>
                     <p class="institution">Indian Institute of Information Technology, Manipur</p>
                     <p class="details">2022 - 2026 | CGPA: 7.38 (up to Semester 6)</p>
+                    <p class="coursework"><strong>Relevant Coursework:</strong> Data Structures & Algorithms, Object-Oriented Programming, Operating Systems, Computer Networks, Database Management Systems, Compiler Design, Artificial Intelligence, Machine Learning, Natural Language Processing, Information Retrieval, Cloud Computing, Cyber Security, Cryptography, Internet of Things (IoT)</p>
                 </div>
                 <div class="education-item">
                     <h3>Class XII | CBSE</h3>
@@ -77,8 +78,8 @@
                 <p class="company"><a href="https://mbsgames.in" target="_blank">MBSGames</a> | Remote</p>
                 <p class="date">May 2025 - July 2025</p>
                 <ul>
-                    <li>Contributed to the development of 'Tiny Toads,' an educational mobile game for children focused on English spelling and foundational math skills.</li>
-                    <li>Assisted in software development and debugging for interactive learning modules, including alphabet drawing, number counting, and silhouette matching games.</li>
+                    <li>Developed core gameplay mechanics for 'Tiny Toads,' an educational mobile game, utilizing Unity and C# to enhance user engagement and learning outcomes.</li>
+                    <li>Engineered interactive learning modules (alphabet drawing, number counting) and optimized performance, resulting in a smoother user experience on low-end devices.</li>
                 </ul>
             </div>
         </section>
@@ -87,21 +88,27 @@
             <h2 class="section-title"><i class="fas fa-project-diagram"></i> Projects</h2>
             <div class="project-grid">
                 <div class="project-card">
+                    <h3>High-Performance Trading Platform (CLI)</h3>
+                    <p class="tech-stack">C++ | Boost.Beast | WebSocket | Deribit APIs</p>
+                    <p class="project-description">Architected a low-latency HFT simulation engine in C++, capable of processing real-time market data via Deribit APIs with sub-millisecond latency. Implemented lock-free data structures and multithreaded request handling, increasing throughput by 40% and ensuring fault tolerance under high load.</p>
+                    <a href="https://github.com/lakshaygarg755/deribit-trader" target="_blank" class="project-link">View on GitHub <i class="fab fa-github"></i></a>
+                </div>
+                <div class="project-card">
                     <h3>Course Directory - Full Stack App</h3>
                     <p class="tech-stack">MongoDB | Express.js | EJS | Node.js</p>
-                    <p class="project-description">Engineered a responsive full stack application with RESTful API integration, secure passport authentication, and a scalable file management system.</p>
+                    <p class="project-description">Built a responsive full-stack course management platform with RESTful APIs, supporting 500+ documents and role-based access for admins and professors. Applied MVC design pattern with clear separation of concerns, ensuring maintainable and scalable architecture.</p>
                     <a href="https://github.com/lakshaygarg755/course_organizer" target="_blank" class="project-link">View on GitHub <i class="fab fa-github"></i></a>
                 </div>
                 <div class="project-card">
                     <h3>Chat Application</h3>
                     <p class="tech-stack">Node.js | Express.js | MongoDB | Socket.io</p>
-                    <p class="project-description">Architected a real-time chat application using WebSockets for low-latency, bidirectional communication and implemented secure user authentication.</p>
+                    <p class="project-description">Architected a real-time chat application, leveraging WebSockets for low-latency communication in a client-server model. Integrated Redis caching and pub/sub messaging, reducing database query load by 40% and enabling seamless horizontal scaling.</p>
                     <a href="https://github.com/lakshaygarg755/chatapp" target="_blank" class="project-link">View on GitHub <i class="fab fa-github"></i></a>
                 </div>
                 <div class="project-card">
                     <h3>Network Scheduling Algorithm Visualizer</h3>
                     <p class="tech-stack">C++ | Qt Framework</p>
-                    <p class="project-description">Designed a first-of-its-kind interactive tool to visualize 5 network scheduling algorithms, with efficient data processing and performance optimizations.</p>
+                    <p class="project-description">Designed and implemented an interactive visualization tool for 5 network scheduling algorithms. Optimized rendering algorithms in Qt, achieving a 40% reduction in execution time and supporting real-time visualization of complex scheduling logic.</p>
                     <a href="https://github.com/lakshaygarg755/Algo-visualiser" target="_blank" class="project-link">View on GitHub <i class="fab fa-github"></i></a>
                 </div>
             </div>
@@ -113,13 +120,13 @@
                 <div class="skill-category">
                     <h3>Programming Languages</h3>
                     <div class="skills-list">
-                        <span>JavaScript</span><span>Python</span><span>C/C++</span><span>Java</span><span>C#</span>
+                        <span>JavaScript (ES6+)</span><span>Python</span><span>C/C++</span><span>Java</span><span>C#</span><span>Go</span>
                     </div>
                 </div>
                  <div class="skill-category">
                     <h3>Web Development</h3>
                     <div class="skills-list">
-                        <span>HTML5</span><span>CSS3</span><span>React.js</span><span>Bootstrap</span><span>Tailwind CSS</span>
+                        <span>HTML5</span><span>CSS3</span><span>React.js</span><span>Next.js</span><span>Bootstrap</span><span>Tailwind CSS</span><span>Redux</span>
                     </div>
                 </div>
                 <div class="skill-category">
@@ -137,7 +144,7 @@
                  <div class="skill-category">
                     <h3>Tools & Cloud</h3>
                     <div class="skills-list">
-                        <span>Git</span><span>GitHub</span><span>VS Code</span><span>Postman</span><span>Agile/Scrum</span><span>Render</span>
+                        <span>Git</span><span>GitHub</span><span>VS Code</span><span>npm</span><span>Postman</span><span>Linux/Unix</span><span>Agile/Scrum</span><span>Docker (basic)</span><span>Render</span><span>AWS (basic)</span>
                     </div>
                 </div>
             </div>
@@ -146,9 +153,10 @@
         <section id="certifications" class="content-section">
             <h2 class="section-title"><i class="fas fa-award"></i> Certifications & Leadership</h2>
             <ul class="cert-list">
-                <li><strong>Web Development Bootcamp</strong> - Udemy (65-hour full-stack training)</li>
-                <li><strong>Team Lead - Smart India Hackathon 2024</strong> (Led a 6-person team using Agile/Scrum)</li>
-                <li><a href="https://www.hackerrank.com/lakshaygarg9812" target="_blank"><strong>Competitive Programming</strong></a> (Solved 200+ problems on LeetCode, HackerRank, etc.)</li>
+                <li><strong>Web Development Bootcamp</strong> - Udemy (Mar 2024) — 65-hour full-stack development training.</li>
+                <li><strong>Team Lead - Smart India Hackathon 2024</strong> (Aug 2024) — Led 6-person development team using Agile/Scrum.</li>
+                <li><strong>Problem Solving</strong> — Solved 500+ coding problems on HackerRank and LeetCode.</li>
+                <li><strong>Ethical Hacking and Penetration Testing</strong> - C-DAC NOIDA (Dec 2024 – Jan 2025) — Completed online training & virtual internship under Cyber Gyan Project.</li>
             </ul>
         </section>
 
